fixed scrollbar issue

--- a/static/items.css
+++ b/static/items.css
@@ -1,8 +1,9 @@
 @import url("colors.css");
 
 .items {
+    padding: 0%;
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -15,7 +16,7 @@
     width: 200px;
     height: 200px;
     /*color: var(--text-darker);*/
-    background: linear-gradient(145deg, #14221c, #182921);
+    background: linear-gradient(145deg,  #1d3027, #182922);
     box-shadow:  10px 10px 20px #121511,
              -10px -10px 20px #1a1f19;
 }
@@ -43,6 +44,9 @@ img {
 .item-view {
     display: flex;
     flex-direction: row;
+    height: 100%;
+    margin: 0%;
+    padding: 0px;
 }
 .item-info {
     background-color: red;
@@ -71,6 +75,7 @@ h1 {
 }
 
 meter {
+
     padding: 0px 20px;
     width: 100%;
 }
