--- a/static/style.css
+++ b/static/style.css
@@ -46,7 +46,7 @@ html, body {
   margin-left: 160px; /* Same as the width of the sidenav */
   font-size: 28px; /* Increased text to enable scrolling */
   display: flex;
-  padding: 10px;
+  padding: 0px;
   flex-direction: column;
   height:100%;
 }
